# ghostz-gpu

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  bootstrap.sh
cmake/Modules/: AddCXXCompilerFlag.cmake  AddGoogletest.cmake  FindSanitizers.cmake  Findbenchmark.cmake  Findfolly.cmake  Findgflags.cmake  Findglog.cmake  googletest.cmake  sanitizers.cmake
ext/karlin/src/: karlin.c  karlin.h
ext/seg/src/: ln_factrial_table.h  seg.cpp  seg.h
src/: CMakeLists.txt  align_main.cpp  align_main.h  aligner.cpp  aligner.h  aligner_build_results_thread.cpp  aligner_build_results_thread.h  aligner_common.cpp  aligner_common.h  aligner_gpu.cpp  aligner_gpu.h  aligner_gpu_data.cu  aligner_gpu_data.h  aligner_gpu_presearch_thread.cpp  aligner_gpu_presearch_thread.h  aligner_presearch_thread.cpp  aligner_presearch_thread.h  alphabet_coder.cpp  alphabet_coder.h  chain_filter.cpp  chain_filter.h  common.h  cuda_common.h  database.cpp  database.h  database_build_main.cpp  database_build_main.h  database_chunk.cpp  database_chunk.h  dense_hash_inverted_index.h  device_seeds_memory.cu  device_seeds_memory.h  distance_calculation_seed_list.cpp  distance_calculation_seed_list.h  distance_calculator.cpp  distance_calculator.h  distance_calculator_gpu.cu  distance_calculator_gpu.h  distance_calculator_gpu_ref_kernel.cu  dna_sequence.cpp  (+88 more)
test/: CMakeLists.txt  chain_filter_test.cpp  database_test.cpp  distance_calculation_seed_list_test.cpp  distance_calculator_gpu_test.cu  distance_calculator_test.cpp  dna_sequence_test.cpp  gapped_extender_gpu_test.cu  gapped_extender_test.cpp  group_loader_test.cu  one_mismatch_hash_generator_test.cpp  packed_alphabet_code_test.cu  perfect_hash_inverted_index_test.cpp  reduced_alphabet_coder_test.cpp  reduced_alphabet_file_reader_test.cpp  reduced_alphabet_k_mer_hash_function_test.cpp  reduced_alphabet_variable_hash_function_test.cpp  score_matrix_test.cpp  seed_searcher_common_test.cpp  sequence_reader_test.cpp  translated_dna_query_test.cpp  translator_test.cpp  ungapped_extender_gpu_test.cu  ungapped_extender_test.cpp
